Disallow modification of protected task fields