@@ -1,7 +1,6 @@
 package rs.laxsrbija.chores.adapter.out.persistence.item;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import rs.laxsrbija.chores.adapter.out.persistence.PersistenceAdapter;
@@ -33,7 +32,7 @@ class ItemPersistenceAdapter extends PersistenceAdapter<Item> implements ItemOut
           final Category category = categoryOutboundPort.get(itemEntity.getCategoryId());
           return itemMapper.toItem(itemEntity, category);
         })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
