@@ -2,7 +2,6 @@ package rs.laxsrbija.chores.application.service;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import rs.laxsrbija.chores.domain.Overview;
@@ -23,12 +22,12 @@ class OverviewService {
         .filter(task -> task.getOccurrence().getDaysUntilNextOccurrence() >= 0)
         .sorted(Comparator.comparingLong(task -> task.getOccurrence().getDaysUntilNextOccurrence()))
         .limit(MAX_OVERVIEW_TASK_SIZE)
-        .collect(Collectors.toList());
+        .toList();
 
     final List<Task> overdue = tasks.stream()
         .filter(task -> task.getOccurrence().getDaysUntilNextOccurrence() < 0)
         .sorted(Comparator.comparingLong(task -> task.getOccurrence().getDaysUntilNextOccurrence()))
-        .collect(Collectors.toList());
+        .toList();
 
     return Overview.builder()
         .upcoming(upcoming)
